...
                  SizedBox(height: 30.pixelScale(context)),
                  Padding(
                    padding:  EdgeInsets.symmetric(horizontal: 25.0.pixelScale(context)),
                    child: Padding(
                      padding: EdgeInsets.only(left: 0.0),
                      child: TextFormField(
                        key: Key('emailInput'),
                        controller: emailController,
                        decoration: InputDecoration(
                          contentPadding: EdgeInsets.only(left: 15.pixelScale(context), top: 12.5.pixelScale(context)),
                          border: OutlineInputBorder(
                            borderSide: BorderSide(
                              color: Theme.of(context).colorScheme.secondary,
...
                  //Here is the password text field
                  Padding(
                    padding:  EdgeInsets.symmetric(horizontal: 25.0.pixelScale(context)),
                    child: Padding(
                      padding: EdgeInsets.only(left: 0.0),
                      child: TextFormField(
                        key: Key('passwordInput'),
                        controller: passwordController,
                        obscureText: true,
                        decoration: InputDecoration(
                          contentPadding: EdgeInsets.only(left: 15.pixelScale(context), top: 12.5.pixelScale(context)),
                          border: OutlineInputBorder(
                            borderSide: BorderSide(
...
                            emailController.clear();
                          }
                        }
                      },
                      child: Container(
                        padding: EdgeInsets.all(15.pixelScale(context)),
                        key: Key('Login_Button'),
                        decoration: BoxDecoration(
                          color: Color.fromARGB(255, 0, 255, 117),
                          borderRadius: BorderRadius.circular(15.pixelScale(context)),
                        ),
                        child:  Center(
                          child: Text(
...
