...
                  child: Column(
                    mainAxisSize: MainAxisSize.max,
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      Expanded(
                        child: SingleChildScrollView(
                          key: const Key('createEventScroll'),
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            children: [
                              Align(
                                alignment: const AlignmentDirectional(0, -1),
                                child: Container(
...
                                          SizedBox(
                                            height: 10.pixelScale(context),
                                          ),
                                          SizedBox(
                                            height: 70.pixelScale(context),
                                            child: TextFormField(
                                              key: const Key('nameTextField'),
                                              onFieldSubmitted: (val) {
                                                name = nameController.text;
                                                if (name.isNotEmpty) {
                                                  setState(() {
                                                    validName = true;
                                                  });
...
                                                    gameName = gameInfo['name'];
                                                  }
                                                });
                                              });
                                            },
                                            child: Container(
                                              key: const Key('gameSelector'),
                                              padding: EdgeInsetsDirectional
                                                  .fromSTEB(
                                                      16.pixelScale(context),
                                                      0,
                                                      16.pixelScale(context),
                                                      0),
...
                                          ),
                                          SizedBox(
                                            height: 20.pixelScale(context),
                                          ),
                                          TextFormField(
                                            key: const Key(
                                                'descriptionTextField'),
                                            onTapOutside: (event) {
                                              FocusManager.instance.primaryFocus
                                                  ?.unfocus();
                                            },
                                            maxLength: 100,
                                            controller: descriptionController,
...
                                              fontSize: 14.pixelScale(context),
                                              letterSpacing: 0,
                                              fontWeight: FontWeight.w500,
                                            ),
                                          ),
                                          InkWell(
                                            key: const Key('start_date_picker'),
                                            splashColor: Colors.transparent,
                                            focusColor: Colors.transparent,
                                            hoverColor: Colors.transparent,
                                            highlightColor: Colors.transparent,
                                            onTap: () async {
                                              final datePickedDate =
...
                                              ),
                                            ),
                                          ),
                                          SizedBox(
                                              height: 20.pixelScale(context)),
                                          InkWell(
                                            key: const Key('end_date_picker'),
                                            splashColor: Colors.transparent,
                                            focusColor: Colors.transparent,
                                            hoverColor: Colors.transparent,
                                            highlightColor: Colors.transparent,
                                            onTap: () async {
                                              final datePickedDate2 =
...
                                                    width:
                                                        43.pixelScale(context),
                                                    child: FittedBox(
                                                      fit: BoxFit.fill,
                                                      child: Switch.adaptive(
                                                        key:
                                                            const Key('switch'),
                                                        activeTrackColor:
                                                            Theme.of(context)
                                                                .colorScheme
                                                                .primary,
                                                        inactiveTrackColor:
                                                            Theme.of(context)
...
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    16.pixelScale(context),
                                    12.pixelScale(context),
                                    16.pixelScale(context),
                                    12.pixelScale(context)),
                                child: MaterialButton(
                                  key: const Key('create_event_button'),
                                  height: 50.pixelScale(context),
                                  shape: RoundedRectangleBorder(
                                      borderRadius: BorderRadius.circular(10)),
                                  minWidth: double.infinity,
                                  onPressed: () {
                                    name = nameController.text;
...
