...
                        },
                      )),
                      Padding(
                        padding: const EdgeInsetsDirectional.fromSTEB(
                            15, 12, 15, 12),
                        child: MaterialButton(
                            key: const Key('save_game_button'),
                            onPressed: () {
                              Navigator.pop(context, ({"chosen":chosenGame,"name":gameName}));
                            },
                            height: 35,
                            color: Theme.of(context).colorScheme.primary,
                            shape: RoundedRectangleBorder(
...
